# md-manager

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: app.rs  lib.rs  main.rs
src/types/: explorer.rs  filedir.rs  mod.rs  preview.rs  searcher.rs
