[package]
name = "md-manager"
version = "0.1.0"
edition = "2024"
authors = ["nixtrim <omuaz01@gmail.com>"]
license = "GPL-3.0"
description = "An Obsidian like app right in your terminal."
readme = "README.md"
homepage = "https://github.com/rootrim/md-manager"
repository = "https://github.com/rootrim/md-manager"

[dependencies]
clap = "4.5.45"
crossterm = "0.29.0"
ratatui = "0.29.0"
